cmake_minimum_required(VERSION 3.30)
project(Data_Structures_and_Algorithms C)

set(CMAKE_C_STANDARD 17)

add_executable(hanoi hanoi.c)
add_executable(Fibonacci_sequence permutation_11.c)
add_executable(Combination Combination.c)
add_executable(permutation_11 permutation_11.c)
add_executable(C_k_n C_k_n.c)
add_executable(fibo.c fibo.c)
add_executable(linked_list linked_list.c)
add_executable(permutation permutation.c)
add_executable(linear linear_equation.c)
add_executable(Disjoint Disjoint.c)
add_executable(Linked_List_Manipulation.c Linked_List_Manipulation.c)
add_executable(Max_SubSequence Max_SubSequence.c)
add_executable(Maze Maze.c)
add_executable(stack_queue stack_queue.c)
add_executable(parenteness Parenthesis.c)
add_executable(tree_manipulation tree_manipulation.c)
add_executable(sorting_algorithms sorting_algorithms.c)
add_executable(tree_manipulate_depth tree_manipulate_depth.c)
add_executable(family_tree family_tree.c)
add_executable(queue queue.c)
add_executable(DP DP.c)